Spacing fixes thruout

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,12 @@ a {
     clip-path: circle();
 }
 
+.container {
+  min-height: 110vh;
+  display: flex;
+  align-items: center;
+}
+
 .jumbotron{
     margin-top: 2vh;
     background-color: rgba(30, 30, 30, 0.5);
@@ -89,7 +95,16 @@ nav {
     border-radius: 50px;
     border:#fff solid 2px;
     transition: box-shadow .3s;
+
+    transition: transform .4s; /* Animation */
+    transition: margin-block .4s; /* Animation */
   }
+  
+  nav img:hover {
+    transform: scale(1.4);
+    margin-block: 10px;
+  }
+  
 
   nav img:hover {
     box-shadow: 0 0 11px rgb(255, 255, 255); 
@@ -189,6 +204,10 @@ nav {
     height: 100%;
 }
 
+.minWidth100 {
+  min-width: 100%;
+}
+
 .CardTextOverlay {
     background-color:  rgba(0, 0, 0, 0.8);
     width: 100%;
@@ -209,16 +228,6 @@ nav {
   margin-inline: 10px;
 }
 
-nav img {
-  transition: transform .4s; /* Animation */
-  transition: margin-block .4s; /* Animation */
-}
-
-nav img:hover {
-  transform: scale(1.4);
-  margin-block: 10px;
-}
-
 @media only screen and (min-width: 1200px){ /* Makes content look better on wider screens. overid bootstrap default. applys to everything in main  */
     #about-me {
         max-width: 1300px;
@@ -236,9 +245,20 @@ nav img:hover {
       transform: translateX(-50%);
       min-width: 95%;
       background-color: rgba(0, 0, 0, 0.8);
-      padding: 15px;
+      padding: 8px;
       border-radius: 90px;
       margin: 0px 0px 10px 0px;
       z-index: 200;
+      }
+
+      nav img {
+        max-width: 45px;
+        max-height: 45px;
+        padding: 10px;
+      }
+
+      nav img:hover {
+        transform: scale(1.2);
+        margin-block: 2px;
       }
 }
